samples/_failures_safe/1761202739_eeeadf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_722ddf65.c: In function ‘main’:
./samples/SAFE/__tmp_722ddf65.c:149:5: error: expected expression at end of input
  149 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_722ddf65.c:149:5: error: expected declaration or statement at end of input
